--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "@types/morgan": "^1.9.9",
-    "@types/node": "^16.18.98",
     "@types/cors": "^2.8.17",
     "@types/ejs": "^3.1.5",
     "@types/express": "^4.17.21",
+    "@types/morgan": "^1.9.9",
     "@types/multer": "^1.4.12",
+    "@types/node": "^16.18.98",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
   },
@@ -34,6 +34,7 @@
     "multer": "^1.4.5-lts.1",
     "pg": "^8.4.0",
     "reflect-metadata": "^0.1.13",
+    "socket.io": "^4.8.1",
     "ts-node-dev": "^2.0.0",
     "typeorm": "0.3.20",
     "uuid": "^9.0.1"
